fix typo in name
